# ChangeLog for dev-libs/zziplib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/zziplib/ChangeLog,v 1.66 2009/06/23 11:46:30 vapier Exp $

*zziplib-0.13.55 (23 Jun 2009)

  23 Jun 2009; Mike Frysinger <vapier@gentoo.org> +zziplib-0.13.55.ebuild:
  Version bump.

  26 May 2009; Mike Frysinger <vapier@gentoo.org> zziplib-0.13.54.ebuild:
  Make sure we actually disable the targets which install useless lib
  symlinks.

*zziplib-0.13.54 (24 May 2009)

  24 May 2009; Mike Frysinger <vapier@gentoo.org> +zziplib-0.13.54.ebuild:
  Version bump.

*zziplib-0.13.53 (23 May 2009)

  23 May 2009; Mike Frysinger <vapier@gentoo.org> +zziplib-0.13.53.ebuild:
  Version bump.

*zziplib-0.13.52 (23 May 2009)

  23 May 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +files/zziplib-0.13.52-SDL-test.patch,
  +files/zziplib-0.13.52-python.patch,
  +files/zziplib-0.13.52-sparc-aligned-access.patch,
  -zziplib-0.13.49.ebuild, +zziplib-0.13.52.ebuild:
  version bump; clean old

  07 Jan 2009; Kenneth Prugh <ken69267@gentoo.org>
  zziplib-0.13.49-r1.ebuild:
  amd64 stable, bug #252736

  05 Jan 2009; Jeroen Roovers <jer@gentoo.org> zziplib-0.13.49-r1.ebuild:
  Stable for HPPA (bug #252736).

  04 Jan 2009; Raúl Porcel <armin76@gentoo.org> zziplib-0.13.49-r1.ebuild:
  alpha/ia64 stable wrt #252736

  02 Jan 2009; Torsten Veller <tove@gentoo.org> zziplib-0.13.49-r1.ebuild:
  Stable on x86 (#252736)

  31 Dec 2008; Mike Frysinger <vapier@gentoo.org>
  files/zziplib-0.13.50-sparc-aligned-access.patch, zziplib-0.13.50.ebuild:
  Update by Friedrich Oslage to use ZZIP_HAVE_ALIGNED_ACCESS_REQUIRED.

  31 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  zziplib-0.13.49-r1.ebuild:
  Stable on sparc, bug #252736

  30 Dec 2008; Brent Baude <ranger@gentoo.org> zziplib-0.13.49-r1.ebuild:
  stable ppc64, bug 252736

  28 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  zziplib-0.13.49-r1.ebuild:
  ppc stable, bug #252736
