@@ -8,6 +8,6 @@ AUX zziplib-0.13.50-sparc-aligned-access.patch 1465 RMD160 ceecb9151c7e68658e1b8
 DIST zziplib-0.13.49.tar.bz2 654842 RMD160 3ba64880298edaf192a9a773262810ff08d710e4 SHA1 72825fcbab93377d7866a8e6a9dfdef53f0343fa SHA256 f57c4e33eb2cdd87a6c2f01bfa4794340fbe61ea1a1cfc7dac3b6671e1dd22af
 DIST zziplib-0.13.55.tar.bz2 696199 RMD160 3263c7c1367dc609404ca7a529ba555f32bbe0ce SHA1 b85c3b4342cf78750d07a52685e57aafeb2a9841 SHA256 869765f960c145f2d9cb83814c66a2b016656dc130a64d8aa9f6eaf91c7ba497
 EBUILD zziplib-0.13.49-r1.ebuild 1601 RMD160 af3d56fe4be58a7ae5170c1e8d44c810a10cae7a SHA1 ec4466c1ad15d46967f4722ee384a58bcc8dd712 SHA256 edd19f5b6997f416885cc3a4396b88b4b2416aa5dc8ccd69e140a5338ba16347
-EBUILD zziplib-0.13.55.ebuild 1460 RMD160 6bfdd6b79dcc9d5217d51ba5278af59007d98745 SHA1 b7feef9b36adc7d4570cd087566f822294b38a29 SHA256 f71c39df1913951d7e84eebd334b722e793577302e4296de584f65b95b9a52e9
-MISC ChangeLog 9078 RMD160 221aba007a3c08bd6b682bca6ded8c8f51987663 SHA1 b5f7e5f7cdcf692f843314e822e2144c3d63bcf4 SHA256 712f55172f9d33f5f9277b19d5abbd215ef2d16db287c9407d46d957b575568b
+EBUILD zziplib-0.13.55.ebuild 1512 RMD160 439d89620e727949863edc35209e9bdc9ace5451 SHA1 16975c86bd53851363298d2ce978e9ac5fb98150 SHA256 a93a9a6b2f0a8ab898bbdee49bf892a737557a9d7d8ba3a5e4cb714ab4d2fce5
+MISC ChangeLog 9205 RMD160 9aaec0465b681db4781d589673048c38fe7531ad SHA1 92d17f0ae018fa77eed785f396eef2bf0b0ae937 SHA256 c64da4c760e1fc16df8a6543c7ad44a0509282016a867f03d5ef69660404d5aa
 MISC metadata.xml 285 RMD160 3faddc79f99fd2e176331b7691ab303d68afff1f SHA1 bf0a1e4c233011a630921773d4968d1e5fe96265 SHA256 aabbb33ddce6a4c9c25c0e405250095050964ba66593fdeef74ac0023bdb301c
