@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/zziplib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/zziplib/ChangeLog,v 1.66 2009/06/23 11:46:30 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/zziplib/ChangeLog,v 1.67 2009/06/24 21:09:36 mr_bones_ Exp $
+
+  24 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
+  zziplib-0.13.55.ebuild:
+  add back the python patch (bug #275247)
 
 *zziplib-0.13.55 (23 Jun 2009)
 
